--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% block title %}Welcome!{% endblock %}</title>
-    <!-- Custom styles for this template -->
-    {% block stylesheets %}
-        {# encore_entry_link_tags('app') #}
-    {% endblock %}
+    <meta charset="UTF-8">
+    <title>Symfony 4 with a Vue.js SPA</title>
+    {{ encore_entry_link_tags('app') }}
 </head>
-<body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
-<header class="app-header navbar">
+<body>
 
-</header>
-<div class="app-body">
-   Hello
-</div>
-<footer class="app-footer">
-    <div>
-        <span>© {{ "now"|date("Y") }} All rights reserved</span>
-    </div>
-</footer>
-{% block javascripts %}
-    {# encore_entry_script_tags('app') #}
-{% endblock %}
+<div id="app"></div>
+
+{{ encore_entry_script_tags('app') }}
+
 </body>
 </html>
