--- a/assets/vue/assets/scss/_fonts.sass
+++ b/assets/vue/assets/scss/_fonts.sass
@@ -17,20 +17,20 @@
     font-weight: $f-weight
     src: url($f-url) format('woff2')
 
-@include font('Roboto', normal, 100, './assets/fonts/Roboto-Thin.woff2')
-@include font('Roboto', italic, 100, './assets/fonts/Roboto-ThinItalic.woff2')
+@include font('Roboto', normal, 100, '../../assets/fonts/Roboto-Thin.woff2')
+@include font('Roboto', italic, 100, '../../assets/fonts/Roboto-ThinItalic.woff2')
 
-@include font('Roboto', normal, 200, './assets/fonts/Roboto-Light.woff2')
-@include font('Roboto', italic, 200, './assets/fonts/Roboto-LightItalic.woff2')
+@include font('Roboto', normal, 200, '../../assets/fonts/Roboto-Light.woff2')
+@include font('Roboto', italic, 200, '../../assets/fonts/Roboto-LightItalic.woff2')
 
-@include font('Roboto', normal, 400, './assets/fonts/Roboto-Regular.woff2')
-@include font('Roboto', italic, 400, './assets/fonts/Roboto-Italic.woff2')
+@include font('Roboto', normal, 400, '../../assets/fonts/Roboto-Regular.woff2')
+@include font('Roboto', italic, 400, '../../assets/fonts/Roboto-Italic.woff2')
 
-@include font('Roboto', normal, 500, './assets/fonts/Roboto-Medium.woff2')
-@include font('Roboto', italic, 500, './assets/fonts/Roboto-MediumItalic.woff2')
+@include font('Roboto', normal, 500, '../../assets/fonts/Roboto-Medium.woff2')
+@include font('Roboto', italic, 500, '../../assets/fonts/Roboto-MediumItalic.woff2')
 
-@include font('Roboto', normal, 700, './assets/fonts/Roboto-Bold.woff2')
-@include font('Roboto', italic, 700, './assets/fonts/Roboto-BoldItalic.woff2')
+@include font('Roboto', normal, 700, '../../assets/fonts/Roboto-Bold.woff2')
+@include font('Roboto', italic, 700, '../../assets/fonts/Roboto-BoldItalic.woff2')
 
-@include font('Roboto', normal, 800, './assets/fonts/Roboto-Black.woff2')
-@include font('Roboto', italic, 800, './assets/fonts/Roboto-BlackItalic.woff2')
+@include font('Roboto', normal, 800, '../../assets/fonts/Roboto-Black.woff2')
+@include font('Roboto', italic, 800, '../../assets/fonts/Roboto-BlackItalic.woff2')
