--- a/assets/vue/assets/scss/_media.sass
+++ b/assets/vue/assets/scss/_media.sass
@@ -16,6 +16,8 @@
 
 // ≥992px
 +media-breakpoint-down(md)
+  html
+    font-size: 15px
   header
     background-color: $accent
 
@@ -92,6 +94,8 @@
 
 // ≥768px
 +media-breakpoint-down(sm)
+  html
+    font-size: 14px
   .mainNav
     .slider
       min-height: 50vh
